# TeleRAG-Agent

./: .env.example  .gitignore  LICENSE  README.md  docker-compose.yml  pyproject.toml  requirements.txt
data/processed/: teleqna_standards.jsonl
docs/: architecture.md  ax.md  installation.md
logs/: audit.jsonl
models/lora_adapter/: README.md  adapter_config.json  tokenizer_config.json
notebooks/: 00_vllm_smoke_test.ipynb  01_kaggle_ingestion.ipynb  02_fine_tuning.ipynb  03_rag_generation.ipynb  04_pipeline_verification.ipynb  05_gradio_ui_kaggle.ipynb
scripts/: build_golden_dataset.py  download_3gpp_specs.py  download_data.sh  import_kaggle_ingestion.py  kaggle_setup.py  prepare_golden_eval.py  prepare_kaggle_eval.py  run_eval.py  test_pipeline.py  test_retrieval.py
scripts/retrieval/: faiss_retriever.py
src/: config.py  qdrant_utils.py
src/agent/: __init__.py  graph.py  prompts.py  state.py
src/data/: synthetic_alarms.py  synthetic_kpis.py  teleqna_prep.py
src/evaluation/: ablation.py  answer_metrics.py  retrieval_metrics.py
src/ingestion/: chunker.py  embedder.py  indexer.py  kg_builder.py  metadata_enricher.py  pipeline.py
src/models/: __init__.py  inference.py  loader.py
src/pipeline/: __init__.py  rag_pipeline.py
src/retrieval/: context_assembler.py  dense_search.py  fusion.py  kg_search.py  query_understanding.py  reranker.py  sparse_search.py
src/security/: __init__.py  audit_logger.py  input_sanitizer.py  pii_detector.py
src/ui/: __init__.py  app.py  components.py
tests/: test_chunker.py  test_kg.py  test_parser.py
(+12 files in other folders)
